--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,18 @@ dependencies:
   firebase_auth: ^5.5.3
   provider: ^6.1.5
   cloud_firestore: ^5.6.7
+  image_picker: ^1.1.2
+  sleek_circular_slider: ^2.0.1
+  wakelock_plus: ^1.3.2
+  vibration: ^3.1.3
+  do_not_disturb: ^1.0.3
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  android_alarm_manager_plus: ^4.0.7
+  flutter_local_notifications: ^19.2.1
+  rxdart: ^0.28.0
+  installed_apps: ^1.6.0
+  app_usage: ^4.0.1
 
 dev_dependencies:
   flutter_test:
