--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   rxdart: ^0.28.0
   installed_apps: ^1.6.0
   app_usage: ^4.0.1
+  google_nav_bar: ^5.0.7
+  flutter_slidable: ^4.0.0
+  google_generative_ai: ^0.4.7
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/habit.png
+    - lib/assets/images/solo-levling.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
