--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/habit.png
+    - lib/assets/images/habit-loop.png
     - lib/assets/images/solo-levling.png
   #   - images/a_dot_ham.jpeg
 
