--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
     - lib/assets/images/habit.png
     - lib/assets/images/habit-loop.png
     - lib/assets/images/solo-levling.png
+    - lib/assets/images/coach-img.png
+    - lib/assets/images/user-img.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
